# scape-xcorrsound

./: .gitignore  .opf.yml  .travis.yml  ABOUT.md  AudioFile.cpp  AudioFile.h  AudioStream.h  CMakeLists.txt  CNAME  CONTRIBUTE.md  FFT.cpp  FTNaive.cpp  FTNaive.h  LICENSE  Makefile  README  README.md  Vagrantfile  build.sh  changelog  createtarball.sh  cross_correlation.h  cross_correlation_test.cpp  index.html  install.sh  install_dependencies.sh  integrationTests.sh  libav.cmake  logstream.cpp  logstream.h  migration-qa_0.9  migrationQA.cpp  migrationQAfail1Test.sh  migrationQAsucces1Test.sh  my_utils.cpp  my_utils.h  overlap-analysis.cpp  sonar-project.properties  sound_match.cpp  sound_match.h  (+8 more)
apps/: CMakeLists.txt  cmake_config.h.in  ismir_build_index.cc  ismir_impl.cc  ismir_merge.cc  ismir_query.cc  overlap-analysis.cpp  revindex.cc  sound_match.cpp  waveform-compare.cpp
cmake-modules/: FindFFTW.cmake  mingw32-cross-compile.cmake
css/: style.css
debian/: README  README.Debian  README.source  changelog  control  copyright  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  scape-xcorrsound.manpages
demosite/: bootstrap.sh  getTestData.sh  index.html  install_xcorrsound.sh
demosite/StyleJS/json/: .small_example.txt.swp
demosite/Templates/: check.php  index.html
demosite/sample/: README
demosite/site/: README.md  compare_files.php  index.html  xcorrsound.js  xcorrsound.php
demosite/site/StyleJS/: ajax.js
demosite/site/Templates/: index.html
demosite/site/images/: Scape_Logo_v11-with_tagline.eps
demosite/site/overlap-analysis/: README.md  index.html
demosite/site/sound-match/: index.html
demosite/site/waveform-compare/: index.html
fftw-3.2.2/: Makefile  config.h  config.status  fftw.pc  libtool
fftw-3.2.2/api/: Makefile
fftw-3.2.2/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  plan-guru-dft-c2r.Plo  (+25 more)
fftw-3.2.2/cell/: Makefile
fftw-3.2.2/cell/.deps/: cell.Plo  conf.Plo  copy.Plo  dft-direct-cell.Plo  plans-double.Plo  transpose.Plo
fftw-3.2.2/cell/spu/: Makefile
fftw-3.2.2/dft/: Makefile
fftw-3.2.2/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  indirect-transpose.Plo  indirect.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft-dit.Plo  kdft.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo  zero.Plo
fftw-3.2.2/dft/scalar/: Makefile
fftw-3.2.2/dft/simd/: Makefile
fftw-3.2.2/doc/: Makefile
fftw-3.2.2/doc/FAQ/: Makefile
fftw-3.2.2/genfft/: Makefile
fftw-3.2.2/kernel/: Makefile
fftw-3.2.2/kernel/.deps/: align.Plo  alloc.Plo  assert.Plo  awake.Plo  buffered.Plo  cpy1d.Plo  cpy2d-pair.Plo  cpy2d.Plo  ct.Plo  debug.Plo  extract-reim.Plo  hash.Plo  iabs.Plo  kalloc.Plo  md5-1.Plo  md5.Plo  minmax.Plo  ops.Plo  pickdim.Plo  plan.Plo  planner.Plo  primes.Plo  print.Plo  problem.Plo  rader.Plo  scan.Plo  solver.Plo  solvtab.Plo  stride.Plo  tensor.Plo  tensor1.Plo  tensor2.Plo  tensor3.Plo  tensor4.Plo  tensor5.Plo  tensor7.Plo  tensor8.Plo  tensor9.Plo  tile2d.Plo  timer.Plo  (+3 more)
fftw-3.2.2/libbench2/: Makefile
fftw-3.2.2/libbench2/.deps/: after-ccopy-from.Po  after-ccopy-to.Po  after-hccopy-from.Po  after-hccopy-to.Po  after-rcopy-from.Po  after-rcopy-to.Po  aligned-main.Po  allocate.Po  aset.Po  bench-cost-postprocess.Po  bench-exit.Po  bench-main.Po  can-do.Po  caset.Po  dotens2.Po  info.Po  main.Po  mflops.Po  mp.Po  my-getopt.Po  ovtpvt.Po  pow2.Po  problem.Po  report.Po  speed.Po  tensor.Po  timer.Po  useropt.Po  util.Po  (+6 more)
fftw-3.2.2/m4/: Makefile
fftw-3.2.2/rdft/: Makefile
fftw-3.2.2/reodft/: Makefile
fftw-3.2.2/simd/: Makefile
fftw-3.2.2/support/: Makefile
fftw-3.2.2/tests/: Makefile  bench
fftw-3.2.2/threads/: Makefile
fftw-3.2.2/tools/: Makefile  fftw-wisdom
libs/: CMakeLists.txt
libs/core/: AudioFile.cpp  AudioFile.h  AudioStream.h  CMakeLists.txt  FFT.h  cross_correlation.h  logstream.cpp  logstream.h  my_utils.cpp  my_utils.h  version.h  wavStdinReader.cc  wavStdinReader.hh
libs/sound_index/: CMakeLists.txt  db_wrapper_sqlite.cpp  fingerprint_db.cc  fingerprint_db.hh  fingerprint_strategy.hh  fingerprint_strategy_chroma.cc  fingerprint_strategy_ismir.cc  fingerprint_stream.cc  fingerprint_stream.hh  hamming.h  my_query.h  sig_freqs.cc  test_my_fingerprint.cpp  testfingerprint.cpp
man/: CMakeLists.txt  migrationQA.1  migrationQA.8  overlap-analysis.1  sound-match.1  waveform-compare.1
man/man1/: CMakeLists.txt  ismir_build_index.1.ronn  ismir_merge.1.ronn  ismir_query.1.ronn  overlap-analysis.1.ronn  sound-match.1.ronn  waveform-compare.1.ronn  xcorrsound.1.ronn
sound_index/: Makefile  computeFFT.h  create_fingerprint_function.cpp  db_wrapper.h  db_wrapper_sqlite.cpp  fingerprint.h  ismir_impl  ismir_impl.cc  lets_try_again.cpp  most_significant.cpp  my_database.cpp  my_database.h  my_fingerprint.cpp  my_fingerprint.h  my_query.cpp  my_query.h  test_my_fingerprint.cpp  testfingerprint.cpp
tests/: integrationTests.sh  waveformCompareFail1Test.sh  waveformCompareSuccess1Test.sh  waveformCompareSuccess1Test.sh~
toolspec/: README.md  digital-preservation-qaobject-audio-xcorrsound-comparison.changelog  digital-preservation-qaobject-audio-xcorrsound-comparison.component  digital-preservation-qaobject-audio-xcorrsound-comparison.xml
(+334 files in other folders)
